...
        android:layout_marginBottom="12dp"
        android:background="@drawable/background_chat_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageSend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:padding="8dp"
            android:src="@drawable/ic_send"
            app:tint="@color/white"/>
    </FrameLayout>

    <EditText
        android:id="@+id/inputMessage"
        android:layout_height="40dp"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
...
