<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="Search Posts" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="Location" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="Schedule" />
        <item
            android:id="@+id/nav_user_profil"
            android:icon="@drawable/profiil"
            android:title="Profile" />
        <item
            android:id="@+id/friend_search"
            android:icon="@drawable/ic_user"
            android:title="Find Friends" />
        <item
            android:id="@+id/nav_trending_sports"
            android:icon="@drawable/trending"
            android:title="Trending Sports" />

        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/chat_icon"
            android:title="Chats" />
        <item
            android:id="@+id/nav_sport_equipments"
            android:icon="@drawable/cart"
            android:title="Sports Equipments" />

    </group>
</menu>