<RelativeLayout android:id="@+id/auth_fragment_register"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:background="@drawable/auth_card_shape"
        android:layout_marginStart="32dp"
        android:layout_marginTop="106dp"
        android:layout_width="327dp"
        android:layout_height="693dp" />

    <ImageView
        android:src="@drawable/saly_1"
        android:layout_marginStart="229dp"
        android:layout_marginTop="0dp"
        android:layout_width="163dp"
        android:layout_height="163dp" />

    <RelativeLayout android:id="@+id/register_heading_text"
        android:layout_marginTop="132dp"
        android:layout_marginStart="63dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/create_your_account_color"
            android:layout_marginStart="-12px"
            android:layout_marginTop="0dp"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:text="@string/create_your_account" />

        <TextView
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/create_your_account_color"
            android:layout_marginStart="18dp"
            android:layout_marginTop="33dp"
            android:layout_width="232dp"
            android:layout_height="77.5px"
            android:text="@string/enter_info_to_create_account" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="209dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/firstName"
            android:inputType="textPersonName"
            android:background="@drawable/auth_register_field_shape"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:padding="9dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:background="@drawable/auth_rectangle_41_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="90dp"
            android:layout_height="22dp" />

        <TextView
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="0dp"
            android:layout_width="99dp"
            android:layout_height="32dp"
            android:text="@string/first_name" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="281dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/lastName"
            android:inputType="textPersonName"
            android:background="@drawable/auth_register_field_shape"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:padding="9dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:background="@drawable/auth_rectangle_41_ek1_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="90dp"
            android:layout_height="22dp" />

        <TextView
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="1dp"
            android:layout_width="82dp"
            android:layout_height="30dp"
            android:text="@string/last_name" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="353dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/mail"
            android:inputType="textEmailAddress"
            android:background="@drawable/auth_register_field_shape"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:padding="9dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:background="@drawable/auth_rectangle_41_ek2_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="114dp"
            android:layout_height="21dp" />

        <TextView
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="0dp"
            android:layout_width="107dp"
            android:layout_height="30dp"
            android:text="@string/email_address"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="425dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/phone"
            android:inputType="phone"
            android:background="@drawable/auth_register_field_shape"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:padding="9dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:background="@drawable/auth_rectangle_41_ek3_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="123dp"
            android:layout_height="21dp" />

        <TextView
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="0dp"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:text="@string/phone_number" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="536dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/pwd"
            android:inputType="textPassword"
            android:background="@drawable/auth_register_pwd_selector"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:padding="9dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:background="@drawable/auth_rectangle_41_ek4_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="85dp"
            android:layout_height="21dp" />

        <TextView
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="0dp"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:text="@string/password" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="608dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/confirm_pwd"
            android:background="@drawable/auth_register_pwd_selector"
            android:inputType="textPassword"
            android:layout_marginStart="0dp"
            android:padding="9dp"
            android:layout_marginTop="11dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:background="@drawable/auth_rectangle_41_ek5_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="145dp"
            android:layout_height="21dp" />

        <TextView
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="0dp"
            android:layout_width="136dp"
            android:layout_height="30dp"
            android:text="@string/confirm_password"
            />
    </RelativeLayout>

    <RelativeLayout android:id="@+id/register_btn"
        android:background="@drawable/rectangle_3_shape"
        android:layout_marginTop="719dp"
        android:layout_marginStart="105dp"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="181dp"
        android:layout_height="54dp">

        <TextView
            android:fontFamily="@font/poppins_medium"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </RelativeLayout>

    <TextView android:id="@+id/mail_already_used"
        android:visibility="invisible"
        android:fontFamily="@font/poppins_medium"
        android:textSize="10sp"
        android:textColor="@color/mail_already_used_color"
        android:layout_marginStart="50dp"
        android:layout_marginTop="406dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_already_used_string"
        />

    <TextView android:id="@+id/passwords_are_not_similar"
        android:visibility="invisible"
        android:fontFamily="@font/poppins_medium"
        android:textSize="10sp"
        android:textColor="@color/mail_already_used_color"
        android:layout_marginStart="50dp"
        android:layout_marginTop="661dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwords_are_not_similar_string"
        />


</RelativeLayout>