<RelativeLayout
    android:id="@+id/auth_fragment_mail_validation"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

...
